declated bin/mailinary as package bin

--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "app/main.js",
+  "bin": {
+    "mailinary": "bin/mailinary"
+  },
   "scripts": {
   },
   "author": "",
