--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "node-schedule": "^1.3.2",
     "nodemailer": "^6.4.16",
     "nodemon": "^2.0.6",
+    "normalize-url": "^4.5.1",
     "puppeteer": "^1.20.0",
     "uuid": "^3.4.0"
   },
